samples/_failures_safe/1761507573_0e7556_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4c1dbeba.c: In function ‘main’:
./samples/SAFE/__tmp_4c1dbeba.c:140:5: error: ‘print’ undeclared (first use in this function); did you mean ‘printf’?
  140 |     print
      |     ^~~~~
      |     printf
./samples/SAFE/__tmp_4c1dbeba.c:140:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_4c1dbeba.c:140:10: error: expected ‘;’ at end of input
  140 |     print
      |          ^
      |          ;
./samples/SAFE/__tmp_4c1dbeba.c:140:5: error: expected declaration or statement at end of input
  140 |     print
      |     ^~~~~
